--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@modelcontextprotocol/sdk": "^1.18.2",
     "@prisma/client": "^5.18.0",
     "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "bcryptjs": "^2.4.3",
+    "mcp-handler": "^1.0.2",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "react": "18.3.1",
@@ -30,7 +32,7 @@
     "react-hook-form": "^7.53.0",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.2",
-    "zod": "^3.23.8"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
