--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@node-rs/argon2": "^2.0.2",
     "@prisma/client": "^5.18.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
