--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@prisma/client": "^5.18.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
+    "@upstash/redis": "^1.35.6",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
