si lo puedes imaginar lo puedes hacer

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,9 @@ next-env.d.ts
 
 # Prisma
 prisma/migrations/
+
+# PWA
+public/sw.js
+public/workbox-*.js
+public/sw.js.map
+public/workbox-*.js.map
