--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@prisma/client": "^5.18.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@upstash/redis": "^1.35.6",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
@@ -75,6 +76,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-mock-extended": "^3.0.5",
     "jsdom": "^27.1.0",
+    "next-pwa": "^5.6.0",
     "postcss": "8.4.47",
     "prisma": "^5.18.0",
     "tailwindcss": "3.4.13",
