--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
     "@upstash/redis": "^1.35.6",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
@@ -50,9 +53,11 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.6.0",
+    "react-swipeable": "^7.0.2",
     "recharts": "^2.12.7",
     "reflect-metadata": "^0.2.2",
     "server-only": "^0.0.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.2",
     "tsyringe": "^4.10.0",
     "zod": "^3.25.76"
